Bug 270437 - Dolphin - pressing preview button twice moves to the top of the list
Summary: Dolphin - pressing preview button twice moves to the top of the list
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: details mode (other bugs)
Version First Reported In: 16.12.2
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-08 14:24 UTC by Nikos Papas
Modified: 2011-04-08 22:10 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nikos Papas 2011-04-08 14:24:54 UTC
Version:           unspecified (using KDE 4.6.2) 
OS:                Linux

I am using dolphin with the details list view. If I go to a folder and scroll down and press the preview button, the view is updated normally. Pressing again the preview button moves the scrollbar to the top, thus loosing the location where it was before. This may be related to 

https://bugs.kde.org/show_bug.cgi?id=270435



Reproducible: Always
Comment 1 Frank Reininghaus 2011-04-08 20:04:59 UTC
Thanks for the bug report! I can confirm the issue in master.
Comment 2 Peter Penz 2011-04-08 20:23:57 UTC
The root cause is in KFilePreviewGenerator, I'll try to fix this during the next week (issue is there since at least KDE SC 4.4).
Comment 3 Peter Penz 2011-04-08 20:48:45 UTC
Git commit 41854146040f8638fffb13b20a75f6ecda2837a6 by Peter Penz.
Committed on 08/04/2011 at 20:52.
Pushed by ppenz into branch 'master'.

KFilePreviewGenerator: Prevent unnecessary reloading of directory

When turning off previews the reloading of the directory is
unnecessary and has side effects:
- The selection gets cleared
- The position of the view might get reset

BUG: 270437
BUG: 270435
FIXED-IN: 4.7.0

M  +17   -13   kfile/kfilepreviewgenerator.cpp     

http://commits.kde.org/kdelibs/41854146040f8638fffb13b20a75f6ecda2837a6
Comment 4 Nikos Papas 2011-04-08 21:45:20 UTC
Wow, that was some quick debugging! Does this mean that we will see the fix in 4.7 and not in 4.6.3?
Comment 5 Peter Penz 2011-04-08 22:10:35 UTC
I'm careful with backporting issues that are not really showstoppers, so the fix will be in 4.7.0 and not in 4.6.x

But 4.7.0 is not that far away anyhow ;-)