KFilePreviewGenerator: Prevent unnecessary reloading of directory

When turning off previews the reloading of the directory is
unnecessary and has side effects:
- The selection gets cleared
- The position of the view might get reset

BUG: 270437
BUG: 270435
FIXED-IN: 4.7.0